# dissertation

./: .gitignore  .markdownlint.json  CLAUDE.md  COMBINED_METHOD.md  Justfile  LAN_TASK.md  README.md  bench-full.json  bench-small.json  cupslog.txt  pyproject.toml  solve.py  source.docx  source.rtf  source.txt
.github/workflows/: test.yml
combined/: __init__.py  core.py  heuristics.py  lattice.py  lp.py  model.py  transforms.py
scripts/: bench.py  pad_md_tables.py  scipy_milp.py
source/: source-pandoc.md  source.html
tasks/: lan_b.json  lan_b.py  lan_b_zerocost.py  medium.json  medium2.json  medium20.json  medium50.json  tiny.json
tests/: test_core.py  test_lattice.py  test_lp.py  test_transforms.py
