[project]
name = "combined-method"
version = "0.1.0"
description = "Reimplementation of A.Y. Demin's combined method for ILP (MAI 2002)."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "scipy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["combined"]

[project.scripts]
combined-solve = "solve:main"
